# nix-generation-trimmer

./: .editorconfig  .gitignore  README.md  flake.nix
module/: home.nix  nix.nix  opts.nix
package/: pyproject.toml
package/src/: __main__.py  args.py  generations.py
src/: __main__.py  args.py  color.py  generations.py
