[project]
name = "nix-generation-trimmer"
version = "0.0.1"
description = "Remove old Nix generations with better arguments."
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0"
]

[project.scripts]
nix-generation-trimmer = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

